--- a/AUTHORS
+++ b/AUTHORS
@@ -13,3 +13,4 @@ Zuzana Zahorova <zuzka.12@centrum.cz>
 Osman <osman@fuse.net>
 Olivier Verdier <olivier.verdier@gmail.com>
 Matyas Novak <novakmat@fzu.cz>
+Tom Aldcroft <taldcroft@gmail.com>
