--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,4 @@ Osman <osman@fuse.net>
 Olivier Verdier <olivier.verdier@gmail.com>
 Matyas Novak <novakmat@fzu.cz>
 Tom Aldcroft <taldcroft@gmail.com>
+Alec Kalinin <alec.kalinin@gmail.com>
