--- a/AUTHORS
+++ b/AUTHORS
@@ -15,3 +15,4 @@ Olivier Verdier <olivier.verdier@gmail.com>
 Matyas Novak <novakmat@fzu.cz>
 Tom Aldcroft <taldcroft@gmail.com>
 Alec Kalinin <alec.kalinin@gmail.com>
+Bjarke Dalslet <bjarke.dalslet@gmail.com>
