--- a/AUTHORS
+++ b/AUTHORS
@@ -16,3 +16,4 @@ Matyas Novak <novakmat@fzu.cz>
 Tom Aldcroft <taldcroft@gmail.com>
 Alec Kalinin <alec.kalinin@gmail.com>
 Bjarke Dalslet <bjarke.dalslet@gmail.com>
+Ankit Mahato <aryan.9001@gmail.com>
