--- a/AUTHORS
+++ b/AUTHORS
@@ -17,3 +17,4 @@ Tom Aldcroft <taldcroft@gmail.com>
 Alec Kalinin <alec.kalinin@gmail.com>
 Bjarke Dalslet <bjarke.dalslet@gmail.com>
 Ankit Mahato <aryan.9001@gmail.com>
+Jaroslav Vondrejc <vondrejc@ntis.zcu.cz>
