--- a/AUTHORS
+++ b/AUTHORS
@@ -17,4 +17,5 @@ Tom Aldcroft <taldcroft@gmail.com>
 Alec Kalinin <alec.kalinin@gmail.com>
 Bjarke Dalslet <bjarke.dalslet@gmail.com>
 Ankit Mahato <aryan.9001@gmail.com>
-Jaroslav Vondrejc <vondrejc@ntis.zcu.cz>
+Jaroslav Vondrejc <vondrejc@ntis.zcu.cz>, <vondrejc@gmail.com>
+Zhihua Ouyang <zxo102@gmail.com>
