--- a/AUTHORS
+++ b/AUTHORS
@@ -19,3 +19,4 @@ Bjarke Dalslet <bjarke.dalslet@gmail.com>
 Ankit Mahato <aryan.9001@gmail.com>
 Jaroslav Vondrejc <vondrejc@ntis.zcu.cz>, <vondrejc@gmail.com>
 Zhihua Ouyang <zxo102@gmail.com>
+Lubos Kejzlar <kejzlar@civ.zcu.cz>
